# New_OCTOVOX

./: .coverage  .dockerignore  .gitignore  CHANGES.md  Dockerfile  OCTOVOX_Colab.ipynb  PLAN.md  README.md  RTF_MVDR_TRACKED.md  pyproject.toml  requirements-optional.txt  requirements.txt  room-acoustics-build-spec.md  run.py  wsgi.py
.claude/: settings.json
.github/workflows/: cd.yml  ci.yml
data/input/: PUT_YOUR_RECORDINGS_HERE.txt
frontend/: PORTING.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/hooks/: useCleanStream.ts  useHashRoute.ts  useTheme.ts
frontend/src/lib/: api.ts  constants.ts  errlog.ts  ndjson.test.ts  ndjson.ts  types.ts
frontend/src/state/: modals.ts  session.ts  settings.test.ts  settings.ts  toasts.ts
frontend/src/styles/: base.css  shell.css  tokens.css
octovox_app/: __init__.py  config.py
octovox_app/routes/: __init__.py  api.py  pages.py
octovox_app/services/: __init__.py  clean_cascade.py  pipeline.py  prod_pipeline.py  prod_report.py  rt60_measure.py  verdicts.py
octovox_app/static/: app.js  errlog.js  shell.js  style.css  tokens.css  ux.js
octovox_app/static/acoustics/: index.html
octovox_app/static/ui/: index.html
octovox_app/templates/: index.html
octovox_app/utils/: __init__.py  audio.py  files.py  jobs.py
room-acoustics/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
room-acoustics/src/: main.tsx  styles.css  tokens.css
room-acoustics/src/__tests__/: compare.test.ts  materials.test.ts  modes.test.ts  (+1 more)
tests/: make_azimuth_sweep.py  pilot_dfn2.py  test_prod_pipeline_e2e.py  test_prod_ports.py  test_rt60_measure.py  test_sprint_b.py  test_sprint_c.py
tools/: cfar_eval.py  omlsa_eval.py
(+53 files in other folders)
